--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 *{
     margin: auto;
     text-align: center;
+    font-family: Raleway;
 }
 
 body{
@@ -11,10 +12,11 @@ body{
 
 p{
     color: white;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 h1{
-    font-family: raleway;
     font-weight: 900;
     font-size: 40px;
     line-height: 47px;
@@ -27,10 +29,11 @@ h1{
 
 h2{
     color: #33A8DB;
-    font-family: raleway;
     font-size: 32px;
     font-weight: 700;
     line-height: 37px;
+    text-transform: uppercase;
+    letter-spacing: 6px;
 }    
 
 .banner{
@@ -50,7 +53,7 @@ h2{
 }
 
 .logo > img{
-    padding: 27px 10px;
+    margin: 27px 10px;
 }
 
 .banner-content{
@@ -59,8 +62,6 @@ h2{
 }
 
 .banner-content > p{
-    font-family: raleway;
-    font-weight: 400;
     font-size: 20px;
     margin: 24px 0px;
     text-align: center;
@@ -79,4 +80,53 @@ h2{
     font-weight: 900;
     font-size: 16px;
     letter-spacing: 5px;
+}
+
+#course-content{
+    width: 792px;
+    height: 325px;
+    margin: 108px auto;
+    line-height: 1.3;
+}
+
+#course-content > p, div{
+    margin: 24px auto;
+    color: white;
+}
+
+span{
+    color: #33A8DB;
+    
+}
+
+.module{
+    width: 500px;
+    padding: 16px 10px;
+    border: 1px solid #33A8DB;
+    border-radius: 57px;
+    background-color: #252525;
+    box-shadow: -2px 6px 4px 0px rgba(0, 0, 0, 0.40) inset;
+}
+
+#transform-world{
+    width: auto;
+    height: 450px;
+    background-image: url(../images/woman-code.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position-y: -100px;
+    border-top: 1px solid #33A8DB;
+    border-bottom: 1px solid #33A8DB;
+}
+
+#transform-world > p{
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 50px;
+    text-shadow: 3px 2px #33A8DB;
+    width: 244px;
+    height: 141px;
+    text-align: left;
+    text-transform: lowercase;
+    margin: 150px 250px;
 }
